--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.10"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.0"
   }
 }
